# stream_note

./: .gitignore  AGENTS.md  LICENSE  README.md  STREAM_NOTE_PLANNING.md  STREAM_NOTE_STYLE.md  STREAM_NOTE_STYLE_GUIDE.md  build-android-release.ps1  build-android-signing.ps1  build-deploy.ps1  deploy-remote.ps1  package-lock.json  start-backend.bat  start-backend.ps1  start-dev.bat  start-dev.ps1  start-frontend.ps1  tasks.md  test_extract.json
stream-note-api/: .env.example  alembic.ini  pyproject.toml  requirements.txt
stream-note-api/alembic/: env.py
stream-note-api/alembic/versions/: 20260221_000001_baseline.py
stream-note-api/app/: __init__.py  main.py
stream-note-api/app/api/v1/: __init__.py  deps.py  router.py
stream-note-api/app/core/: env.py  security.py
stream-note-api/app/models/: __init__.py  ai_provider_setting.py  block.py  database.py  document.py  document_revision.py  migrations.py  schema_version.py  silent_analysis_job.py  task.py  user.py
stream-note-api/app/services/: ai_service.py  silent_analysis.py  time_parser.py
stream-note-api/scripts/: __init__.py  backup_db.py  db_utils.py  generate_jwt_secret.py  migrate_db.py  restore_db.py
stream-note-api/tests/api/: test_ai_block_matching.py  test_ai_reset_debug_state.py  test_auth_and_isolation.py  test_document_recovery.py  test_health_check.py  test_tasks_visibility_and_delete.py
stream-note-api/tests/migrations/: test_migrate_db.py
stream-note-api/tests/models/: test_database.py  test_schema_version.py
stream-note-api/tests/services/: test_ai_service.py  test_silent_analysis.py
(+81 files in other folders)
