[project]
name = "stream-note-api"
version = "0.1.0"
requires-python = ">=3.12.7"
dependencies = [
    "alembic==1.14.1",
    "fastapi==0.109.0",
    "httpx==0.26.0",
    "openai==1.10.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.5.3",
    "pytest==7.4.0",
    "pytest-asyncio==0.23.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.25",
    "uvicorn[standard]==0.27.0",
]
